--- a/themes/atheos/modules/active/_main.scss
+++ b/themes/atheos/modules/active/_main.scss
@@ -3,34 +3,30 @@
 	//position  : fixed;
 	//height    : 35px;
 	width: 100%;
-	color: $font-color-subtle;
+	color: $fontColorMinor;
 	background: $foreground;
 	/*box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, .9);*/
 	// overflow: hidden;
 	position: relative;
-	transition: border $transition-duration ease;
+	transition: border $transitionDuration ease;
 }
 
 /************************
  * Close All & Dropdown Buttons
  ************************/
-
-
-
 #tab_close,
 #tab_dropdown {
 	position: absolute;
 	top: 8px;
 	height: $topBarHeight;
-	transition: margin-right $animation-duration ease-in-out;
+	transition: margin-right $animationDuration ease-in-out;
 
 	font-size: 16px;
-	color: $icon-color;
 	cursor: pointer;
+	color: $fontColorMajor;
 
 	&:hover {
-		color: lighten($icon-color, 30%);
-
+		color: $hoverMajor;
 	}
 }
 
