--- a/themes/atheos/modules/codegit/_diff.scss
+++ b/themes/atheos/modules/codegit/_diff.scss
@@ -13,7 +13,7 @@
 	}
 
 	li {
-		color: $font-color-subtle;
+		color: $fontColorMinor;
 		font-family: 'Ubuntu-Fira';
 		white-space: pre;
 
@@ -38,7 +38,7 @@
 		}
 
 		&.context span {
-			color: $font-color-primary;
+			color: $fontColorMajor;
 		}
 
 	}
